adds tabs and fixes default template options

--- a/templates/Regions/Alert.hbs
+++ b/templates/Regions/Alert.hbs
@@ -111,5 +111,5 @@
 alert-dismissible fade show:alert-primary
 {{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}
-alert-primary:ft-region-title-size-h4:text-left
+alert-primary:ft-region-title-size-h4
 {{/PRESET_TEMPLATE_OPTIONS}}
