--- a/templates/Regions/Jumbotron.hbs
+++ b/templates/Regions/Jumbotron.hbs
@@ -64,5 +64,5 @@
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}
-text-left:ft-region-title-size-display-4
+ft-region-title-size-display-4
 {{/PRESET_TEMPLATE_OPTIONS}}
