--- a/templates/Regions/Standard.hbs
+++ b/templates/Regions/Standard.hbs
@@ -39,5 +39,5 @@
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}
-text-left:ft-region-title-size-h2
+ft-region-title-size-h2
 {{/PRESET_TEMPLATE_OPTIONS}}
