--- a/templates/Regions/~global.template.options.hbs
+++ b/templates/Regions/~global.template.options.hbs
@@ -79,6 +79,7 @@
     "DISPLAY_NAME": "Text Alignment",
     "DISPLAY_SEQUENCE": 110,
     "IS_ADVANCED": "N",
+    "NULL_TEXT": "Default",
     "TEMPLATE_OPTIONS": [
       {
         "NAME": "REGION_TEXT_ALIGN_LEFT",
