--- a/templates/Pages/Standard.hbs
+++ b/templates/Pages/Standard.hbs
@@ -132,19 +132,22 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
         "NAME": "PAGE_BODY_CONTAINER_DEFAULT",
         "DISPLAY_NAME": "Default",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ft-page-body-container"
+        "CSS_CLASSES": "ft-page-body-container",
+		    "HELP_TEXT": ""
       },
       {
         "NAME": "PAGE_BODY_CONTAINER_FLUID",
         "DISPLAY_NAME": "Full Width",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "ft-page-body-container-fluid"
+        "CSS_CLASSES": "ft-page-body-container-fluid",
+		    "HELP_TEXT": ""
       },
       {
         "NAME": "PAGE_BODY_CONTAINER_NONE",
         "DISPLAY_NAME": "No Container",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "ft-page-body-container-none"
+        "CSS_CLASSES": "ft-page-body-container-none",
+		    "HELP_TEXT": ""
       }
     ]
   },
@@ -159,19 +162,22 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
         "NAME": "PAGE_FOOTER_CONTAINER_DEFAULT",
         "DISPLAY_NAME": "Default",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ft-page-footer-container"
+        "CSS_CLASSES": "ft-page-footer-container",
+		    "HELP_TEXT": ""
       },
       {
         "NAME": "PAGE_FOOTER_CONTAINER_FLUID",
         "DISPLAY_NAME": "Full Width",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "ft-page-footer-container-fluid"
+        "CSS_CLASSES": "ft-page-footer-container-fluid",
+		    "HELP_TEXT": ""
       },
       {
         "NAME": "PAGE_FOOTER_CONTAINER_NONE",
         "DISPLAY_NAME": "No Container",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "ft-page-footer-container-none"
+        "CSS_CLASSES": "ft-page-footer-container-none",
+		    "HELP_TEXT": ""
       }
     ]
   },
@@ -180,25 +186,29 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
     "DISPLAY_NAME": "Navigation Bar Placement",
     "DISPLAY_SEQUENCE": 2,
     "NULL_TEXT": "Default",
+    "HELP_TEXT": "",
     "IS_ADVANCED": "N",
     "TEMPLATE_OPTIONS": [
       {
         "NAME": "NAVBAR_PLACEMENT_STICKY",
         "DISPLAY_NAME": "Sticky",
         "DISPLAY_SEQUENCE": 0,
-        "CSS_CLASSES": "ft-navbar-sticky-top"
+        "CSS_CLASSES": "ft-navbar-sticky-top",
+		    "HELP_TEXT": ""
       },
       {
         "NAME": "NAVBAR_PLACEMENT_FIXED_BOTTOM",
         "DISPLAY_NAME": "Fixed Bottom",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ft-navbar-fixed-bottom"
+        "CSS_CLASSES": "ft-navbar-fixed-bottom",
+		    "HELP_TEXT": ""
       },
       {
         "NAME": "NAVBAR_PLACEMENT_FIXED_TOP",
         "DISPLAY_NAME": "Fixed Top",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ft-navbar-fixed-top"
+        "CSS_CLASSES": "ft-navbar-fixed-top",
+		    "HELP_TEXT": ""
       }
     ]
   }
