--- a/templates/Regions/Alert.hbs
+++ b/templates/Regions/Alert.hbs
@@ -103,7 +103,8 @@
     "DISPLAY_NAME": "Dismissible",
     "DISPLAY_SEQUENCE": 10,
     "CSS_CLASSES": "alert-dismissible fade show",
-    "HELP_TEXT": "Dismiss any alert inline"
+    "HELP_TEXT": "Dismiss any alert inline",
+    "IS_ADVANCED": "N"
   }
 ]
 {{/TEMPLATE_OPTIONS}}
