--- a/templates/Regions/~global.template.options.hbs
+++ b/templates/Regions/~global.template.options.hbs
@@ -10,67 +10,78 @@
         "NAME": "REGION_TITLE_SIZE_HIDDEN",
         "DISPLAY_NAME": "Hidden",
         "DISPLAY_SEQUENCE": 0,
-        "CSS_CLASSES": "ft-region-title-size-hidden"
+        "CSS_CLASSES": "ft-region-title-size-hidden",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_D1",
         "DISPLAY_NAME": "Display Heading 1",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ft-region-title-size-display-1"
+        "CSS_CLASSES": "ft-region-title-size-display-1",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_D2",
         "DISPLAY_NAME": "Display Heading 2",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "ft-region-title-size-display-2"
+        "CSS_CLASSES": "ft-region-title-size-display-2",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_D3",
         "DISPLAY_NAME": "Display Heading 3",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "ft-region-title-size-display-3"
+        "CSS_CLASSES": "ft-region-title-size-display-3",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_D4",
         "DISPLAY_NAME": "Display Heading 4",
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "ft-region-title-size-display-4"
+        "CSS_CLASSES": "ft-region-title-size-display-4",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_H1",
         "DISPLAY_NAME": "Heading 1",
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "ft-region-title-size-h1"
+        "CSS_CLASSES": "ft-region-title-size-h1",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_H2",
         "DISPLAY_NAME": "Heading 2",
         "DISPLAY_SEQUENCE": 6,
-        "CSS_CLASSES": "ft-region-title-size-h2"
+        "CSS_CLASSES": "ft-region-title-size-h2",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_H3",
         "DISPLAY_NAME": "Heading 3",
         "DISPLAY_SEQUENCE": 7,
-        "CSS_CLASSES": "ft-region-title-size-h3"
+        "CSS_CLASSES": "ft-region-title-size-h3",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_H4",
         "DISPLAY_NAME": "Heading 4",
         "DISPLAY_SEQUENCE": 8,
-        "CSS_CLASSES": "ft-region-title-size-h4"
+        "CSS_CLASSES": "ft-region-title-size-h4",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_H5",
         "DISPLAY_NAME": "Heading 5",
         "DISPLAY_SEQUENCE": 9,
-        "CSS_CLASSES": "ft-region-title-size-h5"
+        "CSS_CLASSES": "ft-region-title-size-h5",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TITLE_SIZE_H6",
         "DISPLAY_NAME": "Heading 6",
         "DISPLAY_SEQUENCE": 10,
-        "CSS_CLASSES": "ft-region-title-size-h6"
+        "CSS_CLASSES": "ft-region-title-size-h6",
+				"HELP_TEXT": ""
       }
     ]
   },
@@ -85,19 +96,22 @@
         "NAME": "REGION_TEXT_ALIGN_LEFT",
         "DISPLAY_NAME": "Left",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "text-left"
+        "CSS_CLASSES": "text-left",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_ALIGN_CENTER",
         "DISPLAY_NAME": "Center",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "text-center"
+        "CSS_CLASSES": "text-center",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_ALIGN_RIGHT",
         "DISPLAY_NAME": "Right",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "text-right"
+        "CSS_CLASSES": "text-right",
+				"HELP_TEXT": ""
       }
     ]
   },
@@ -113,61 +127,71 @@
         "NAME": "REGION_TEXT_COLOR_PRIMARY",
         "DISPLAY_NAME": "Primary",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "text-primary"
+        "CSS_CLASSES": "text-primary",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_SECONDARY",
         "DISPLAY_NAME": "Secondary",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "text-secondary"
+        "CSS_CLASSES": "text-secondary",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_SUCCESS",
         "DISPLAY_NAME": "Success",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "text-success"
+        "CSS_CLASSES": "text-success",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_DANGER",
         "DISPLAY_NAME": "Danger",
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "text-danger"
+        "CSS_CLASSES": "text-danger",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_WARNING",
         "DISPLAY_NAME": "Warning",
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "text-warning"
+        "CSS_CLASSES": "text-warning",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_INFO",
         "DISPLAY_NAME": "Info",
         "DISPLAY_SEQUENCE": 6,
-        "CSS_CLASSES": "text-info"
+        "CSS_CLASSES": "text-info",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_LIGHT",
         "DISPLAY_NAME": "Light",
         "DISPLAY_SEQUENCE": 7,
-        "CSS_CLASSES": "text-light"
+        "CSS_CLASSES": "text-light",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_DARK",
         "DISPLAY_NAME": "Dark",
         "DISPLAY_SEQUENCE": 8,
-        "CSS_CLASSES": "text-dark"
+        "CSS_CLASSES": "text-dark",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_MUTED",
         "DISPLAY_NAME": "Muted",
         "DISPLAY_SEQUENCE": 9,
-        "CSS_CLASSES": "text-muted"
+        "CSS_CLASSES": "text-muted",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_WHITE",
         "DISPLAY_NAME": "White",
         "DISPLAY_SEQUENCE": 10,
-        "CSS_CLASSES": "text-white"
+        "CSS_CLASSES": "text-white",
+				"HELP_TEXT": ""
       }
     ]
   },
@@ -183,103 +207,120 @@
         "NAME": "REGION_BG_COLOR_PRIMARY",
         "DISPLAY_NAME": "Primary",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "bg-primary"
+        "CSS_CLASSES": "bg-primary",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_COLOR_SECONDARY",
         "DISPLAY_NAME": "Secondary",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "bg-secondary"
+        "CSS_CLASSES": "bg-secondary",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_COLOR_SUCCESS",
         "DISPLAY_NAME": "Success",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "bg-success"
+        "CSS_CLASSES": "bg-success",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_COLOR_DANGER",
         "DISPLAY_NAME": "Danger",
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "bg-danger"
+        "CSS_CLASSES": "bg-danger",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_COLOR_WARNING",
         "DISPLAY_NAME": "Warning",
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "bg-warning"
+        "CSS_CLASSES": "bg-warning",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_COLOR_INFO",
         "DISPLAY_NAME": "Info",
         "DISPLAY_SEQUENCE": 6,
-        "CSS_CLASSES": "bg-info"
+        "CSS_CLASSES": "bg-info",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_COLOR_LIGHT",
         "DISPLAY_NAME": "Light",
         "DISPLAY_SEQUENCE": 7,
-        "CSS_CLASSES": "bg-light"
+        "CSS_CLASSES": "bg-light",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_COLOR_DARK",
         "DISPLAY_NAME": "Dark",
         "DISPLAY_SEQUENCE": 8,
-        "CSS_CLASSES": "bg-dark"
+        "CSS_CLASSES": "bg-dark",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_COLOR_WHITE",
         "DISPLAY_NAME": "White",
         "DISPLAY_SEQUENCE": 9,
-        "CSS_CLASSES": "bg-white"
+        "CSS_CLASSES": "bg-white",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_G_COLOR_PRIMARY",
         "DISPLAY_NAME": "Primary Gradient",
         "DISPLAY_SEQUENCE": 10,
-        "CSS_CLASSES": "bg-gradient-primary"
+        "CSS_CLASSES": "bg-gradient-primary",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_G_COLOR_SECONDARY",
         "DISPLAY_NAME": "Secondary Gradient",
         "DISPLAY_SEQUENCE": 11,
-        "CSS_CLASSES": "bg-gradient-secondary"
+        "CSS_CLASSES": "bg-gradient-secondary",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_G_COLOR_SUCCESS",
         "DISPLAY_NAME": "Success Gradient",
         "DISPLAY_SEQUENCE": 12,
-        "CSS_CLASSES": "bg-gradient-success"
+        "CSS_CLASSES": "bg-gradient-success",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_G_COLOR_DANGER",
         "DISPLAY_NAME": "Danger Gradient",
         "DISPLAY_SEQUENCE": 13,
-        "CSS_CLASSES": "bg-gradient-danger"
+        "CSS_CLASSES": "bg-gradient-danger",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_G_COLOR_WARNING",
         "DISPLAY_NAME": "Warning Gradient",
         "DISPLAY_SEQUENCE": 14,
-        "CSS_CLASSES": "bg-gradient-warning"
+        "CSS_CLASSES": "bg-gradient-warning",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_G_COLOR_INFO",
         "DISPLAY_NAME": "Info Gradient",
         "DISPLAY_SEQUENCE": 15,
-        "CSS_CLASSES": "bg-gradient-info"
+        "CSS_CLASSES": "bg-gradient-info",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_G_COLOR_LIGHT",
         "DISPLAY_NAME": "Light Gradient",
         "DISPLAY_SEQUENCE": 16,
-        "CSS_CLASSES": "bg-gradient-light"
+        "CSS_CLASSES": "bg-gradient-light",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_BG_G_COLOR_DARK",
         "DISPLAY_NAME": "Dark Gradient",
         "DISPLAY_SEQUENCE": 17,
-        "CSS_CLASSES": "bg-gradient-dark"
+        "CSS_CLASSES": "bg-gradient-dark",
+				"HELP_TEXT": ""
       }
     ]
   },
@@ -294,37 +335,43 @@
         "NAME": "REGION_MARGIN_TOP_0",
         "DISPLAY_NAME": 0,
         "DISPLAY_SEQUENCE": 0,
-        "CSS_CLASSES": "mt-0"
+        "CSS_CLASSES": "mt-0",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_TOP_1",
         "DISPLAY_NAME": 1,
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "mt-1"
+        "CSS_CLASSES": "mt-1",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_TOP_2",
         "DISPLAY_NAME": 2,
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "mt-2"
+        "CSS_CLASSES": "mt-2",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_TOP_3",
         "DISPLAY_NAME": 3,
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "mt-3"
+        "CSS_CLASSES": "mt-3",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_TOP_4",
         "DISPLAY_NAME": 4,
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "mt-4"
+        "CSS_CLASSES": "mt-4",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_TOP_5",
         "DISPLAY_NAME": 5,
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "mt-5"
+        "CSS_CLASSES": "mt-5",
+				"HELP_TEXT": ""
       }
     ]
   },
@@ -339,37 +386,43 @@
         "NAME": "REGION_MARGIN_BOTTOM_0",
         "DISPLAY_NAME": 0,
         "DISPLAY_SEQUENCE": 0,
-        "CSS_CLASSES": "mb-0"
+        "CSS_CLASSES": "mb-0",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_BOTTOM_1",
         "DISPLAY_NAME": 1,
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "mb-1"
+        "CSS_CLASSES": "mb-1",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_BOTTOM_2",
         "DISPLAY_NAME": 2,
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "mb-2"
+        "CSS_CLASSES": "mb-2",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_BOTTOM_3",
         "DISPLAY_NAME": 3,
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "mb-3"
+        "CSS_CLASSES": "mb-3",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_BOTTOM_4",
         "DISPLAY_NAME": 4,
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "mb-4"
+        "CSS_CLASSES": "mb-4",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_BOTTOM_5",
         "DISPLAY_NAME": 5,
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "mb-5"
+        "CSS_CLASSES": "mb-5",
+				"HELP_TEXT": ""
       }
     ]
   },
@@ -384,37 +437,43 @@
         "NAME": "REGION_MARGIN_LEFT_0",
         "DISPLAY_NAME": 0,
         "DISPLAY_SEQUENCE": 0,
-        "CSS_CLASSES": "ml-0"
+        "CSS_CLASSES": "ml-0",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_LEFT_1",
         "DISPLAY_NAME": 1,
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ml-1"
+        "CSS_CLASSES": "ml-1",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_LEFT_2",
         "DISPLAY_NAME": 2,
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "ml-2"
+        "CSS_CLASSES": "ml-2",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_LEFT_3",
         "DISPLAY_NAME": 3,
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "ml-3"
+        "CSS_CLASSES": "ml-3",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_LEFT_4",
         "DISPLAY_NAME": 4,
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "ml-4"
+        "CSS_CLASSES": "ml-4",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_LEFT_5",
         "DISPLAY_NAME": 5,
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "ml-5"
+        "CSS_CLASSES": "ml-5",
+				"HELP_TEXT": ""
       }
     ]
   },
@@ -429,37 +488,43 @@
         "NAME": "REGION_MARGIN_RIGHT_0",
         "DISPLAY_NAME": 0,
         "DISPLAY_SEQUENCE": 0,
-        "CSS_CLASSES": "mr-0"
+        "CSS_CLASSES": "mr-0",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_RIGHT_1",
         "DISPLAY_NAME": 1,
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "mr-1"
+        "CSS_CLASSES": "mr-1",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_RIGHT_2",
         "DISPLAY_NAME": 2,
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "mr-2"
+        "CSS_CLASSES": "mr-2",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_RIGHT_3",
         "DISPLAY_NAME": 3,
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "mr-3"
+        "CSS_CLASSES": "mr-3",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_RIGHT_4",
         "DISPLAY_NAME": 4,
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "mr-4"
+        "CSS_CLASSES": "mr-4",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_MARGIN_RIGHT_5",
         "DISPLAY_NAME": 5,
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "mr-5"
+        "CSS_CLASSES": "mr-5",
+				"HELP_TEXT": ""
       }
     ]
   },
@@ -468,79 +533,92 @@
     "DISPLAY_NAME": "Visibility",
     "DISPLAY_SEQUENCE": 999,
     "NULL_TEXT": "Visible on all screen sizes",
+    "HELP_TEXT": "Quickly and responsively toggle the display value of components and more with our display utilities.",
     "IS_ADVANCED": "Y",
     "TEMPLATE_OPTIONS": [
       {
         "NAME": "REGION_VISIBILITY_HIDDEN",
         "DISPLAY_NAME": "Hidden on all screen sizes",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "d-none"
+        "CSS_CLASSES": "d-none",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_XS",
         "DISPLAY_NAME": "Visible only on xs",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "d-sm-none"
+        "CSS_CLASSES": "d-sm-none",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_SM",
         "DISPLAY_NAME": "Visible only on sm",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "d-none d-sm-block d-md-none"
+        "CSS_CLASSES": "d-none d-sm-block d-md-none",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_MD",
         "DISPLAY_NAME": "Visible only on md",
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "d-none d-md-block d-lg-none"
+        "CSS_CLASSES": "d-none d-md-block d-lg-none",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_LG",
         "DISPLAY_NAME": "Visible only on lg",
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "d-none d-lg-block d-xl-none"
+        "CSS_CLASSES": "d-none d-lg-block d-xl-none",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_XL",
         "DISPLAY_NAME": "Visible only on xl",
         "DISPLAY_SEQUENCE": 6,
-        "CSS_CLASSES": "d-none d-xl-block"
+        "CSS_CLASSES": "d-none d-xl-block",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_XS-SM",
         "DISPLAY_NAME": "Visible only on xs-sm",
         "DISPLAY_SEQUENCE": 7,
-        "CSS_CLASSES": "d-md-none"
+        "CSS_CLASSES": "d-md-none",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_XS-SM-MD",
         "DISPLAY_NAME": "Visible only on xs-sm-md",
         "DISPLAY_SEQUENCE": 8,
-        "CSS_CLASSES": "d-lg-none"
+        "CSS_CLASSES": "d-lg-none",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_XS-SM-MD-LG",
         "DISPLAY_NAME": "Visible only on xs-sm-md-lg",
         "DISPLAY_SEQUENCE": 9,
-        "CSS_CLASSES": "d-xl-none"
+        "CSS_CLASSES": "d-xl-none",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_LG-XL",
         "DISPLAY_NAME": "Visible only on lg-xl",
         "DISPLAY_SEQUENCE": 10,
-        "CSS_CLASSES": "d-none d-lg-block"
+        "CSS_CLASSES": "d-none d-lg-block",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_MD-LG-XL",
         "DISPLAY_NAME": "Visible only on md-lg-xl",
         "DISPLAY_SEQUENCE": 11,
-        "CSS_CLASSES": "d-none d-md-block"
+        "CSS_CLASSES": "d-none d-md-block",
+				"HELP_TEXT": ""
       },
       {
         "NAME": "REGION_VISIBILITY_SM-MD-LG-XL",
         "DISPLAY_NAME": "Visible only on sm-md-lg-xl",
         "DISPLAY_SEQUENCE": 12,
-        "CSS_CLASSES": "d-none d-sm-block"
+        "CSS_CLASSES": "d-none d-sm-block",
+				"HELP_TEXT": ""
       }
     ]
   }
