--- a/templates/Pages/Standard.hbs
+++ b/templates/Pages/Standard.hbs
@@ -126,6 +126,7 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
     "DISPLAY_NAME": "Page Container",
     "DISPLAY_SEQUENCE": 1,
     "HELP_TEXT": "Containers provide a means to center and horizontally pad your site’s contents",
+    "NULL_TEXT": "",
     "IS_ADVANCED": "N",
     "TEMPLATE_OPTIONS": [
       {
@@ -133,21 +134,21 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
         "DISPLAY_NAME": "Default",
         "DISPLAY_SEQUENCE": 1,
         "CSS_CLASSES": "ft-page-body-container",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       },
       {
         "NAME": "PAGE_BODY_CONTAINER_FLUID",
         "DISPLAY_NAME": "Full Width",
         "DISPLAY_SEQUENCE": 2,
         "CSS_CLASSES": "ft-page-body-container-fluid",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       },
       {
         "NAME": "PAGE_BODY_CONTAINER_NONE",
         "DISPLAY_NAME": "No Container",
         "DISPLAY_SEQUENCE": 3,
         "CSS_CLASSES": "ft-page-body-container-none",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       }
     ]
   },
@@ -156,6 +157,7 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
     "DISPLAY_NAME": "Footer Container",
     "DISPLAY_SEQUENCE": 1,
     "HELP_TEXT": "Containers provide a means to center and horizontally pad your site’s contents",
+    "NULL_TEXT": "",
     "IS_ADVANCED": "Y",
     "TEMPLATE_OPTIONS": [
       {
@@ -163,21 +165,21 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
         "DISPLAY_NAME": "Default",
         "DISPLAY_SEQUENCE": 1,
         "CSS_CLASSES": "ft-page-footer-container",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       },
       {
         "NAME": "PAGE_FOOTER_CONTAINER_FLUID",
         "DISPLAY_NAME": "Full Width",
         "DISPLAY_SEQUENCE": 2,
         "CSS_CLASSES": "ft-page-footer-container-fluid",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       },
       {
         "NAME": "PAGE_FOOTER_CONTAINER_NONE",
         "DISPLAY_NAME": "No Container",
         "DISPLAY_SEQUENCE": 3,
         "CSS_CLASSES": "ft-page-footer-container-none",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       }
     ]
   },
@@ -185,8 +187,8 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
     "NAME": "NAVBAR_PLACEMENT",
     "DISPLAY_NAME": "Navigation Bar Placement",
     "DISPLAY_SEQUENCE": 2,
-    "NULL_TEXT": "Default",
     "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
     "IS_ADVANCED": "N",
     "TEMPLATE_OPTIONS": [
       {
@@ -194,21 +196,21 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
         "DISPLAY_NAME": "Sticky",
         "DISPLAY_SEQUENCE": 0,
         "CSS_CLASSES": "ft-navbar-sticky-top",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       },
       {
         "NAME": "NAVBAR_PLACEMENT_FIXED_BOTTOM",
         "DISPLAY_NAME": "Fixed Bottom",
         "DISPLAY_SEQUENCE": 1,
         "CSS_CLASSES": "ft-navbar-fixed-bottom",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       },
       {
         "NAME": "NAVBAR_PLACEMENT_FIXED_TOP",
         "DISPLAY_NAME": "Fixed Top",
         "DISPLAY_SEQUENCE": 1,
         "CSS_CLASSES": "ft-navbar-fixed-top",
-		    "HELP_TEXT": ""
+        "HELP_TEXT": ""
       }
     ]
   }
