--- a/templates/Regions/Alert.hbs
+++ b/templates/Regions/Alert.hbs
@@ -42,55 +42,64 @@
     "DISPLAY_NAME": "Style",
     "DISPLAY_SEQUENCE": 1,
     "HELP_TEXT": "Specify the alert style.",
+    "NULL_TEXT": "",
     "IS_ADVANCED": "N",
     "TEMPLATE_OPTIONS": [
       {
         "NAME": "ALERT_PRIMARY",
         "DISPLAY_NAME": "Primary",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "alert-primary"
+        "CSS_CLASSES": "alert-primary",
+        "HELP_TEXT": ""
       },
       {
         "NAME": "ALERT_SECONDARY",
         "DISPLAY_NAME": "Secondary",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "alert-secondary"
+        "CSS_CLASSES": "alert-secondary",
+        "HELP_TEXT": ""
       },
       {
         "NAME": "ALERT_SUCCESS",
         "DISPLAY_NAME": "Success",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "alert-success"
+        "CSS_CLASSES": "alert-success",
+        "HELP_TEXT": ""
       },
       {
         "NAME": "ALERT_DANGER",
         "DISPLAY_NAME": "Danger",
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "alert-danger"
+        "CSS_CLASSES": "alert-danger",
+        "HELP_TEXT": ""
       },
       {
         "NAME": "ALERT_WARNING",
         "DISPLAY_NAME": "Warning",
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "alert-warning"
+        "CSS_CLASSES": "alert-warning",
+        "HELP_TEXT": ""
       },
       {
         "NAME": "ALERT_INFO",
         "DISPLAY_NAME": "Info",
         "DISPLAY_SEQUENCE": 6,
-        "CSS_CLASSES": "alert-info"
+        "CSS_CLASSES": "alert-info",
+        "HELP_TEXT": ""
       },
       {
         "NAME": "ALERT_LIGHT",
         "DISPLAY_NAME": "Light",
         "DISPLAY_SEQUENCE": 7,
-        "CSS_CLASSES": "alert-light"
+        "CSS_CLASSES": "alert-light",
+        "HELP_TEXT": ""
       },
       {
         "NAME": "ALERT_DARK",
         "DISPLAY_NAME": "Dark",
         "DISPLAY_SEQUENCE": 8,
-        "CSS_CLASSES": "alert-dark"
+        "CSS_CLASSES": "alert-dark",
+        "HELP_TEXT": ""
       }
     ]
   }
