--- a/templates/Regions/Tabs.hbs
+++ b/templates/Regions/Tabs.hbs
@@ -30,7 +30,7 @@
       {
         "NAME": "NAV_TABS",
         "DISPLAY_NAME": "Tabs",
-        "DISPLAY_SEQUENCE": 2,
+        "DISPLAY_SEQUENCE": 1,
         "CSS_CLASSES": "ft-nav-tabs",
         "HELP_TEXT": ""
       },
@@ -68,5 +68,4 @@
 {{#DEFAULT_TEMPLATE_OPTIONS}}
 js-useLocalStorage:ft-tab-fade:ft-nav-tabs
 {{/DEFAULT_TEMPLATE_OPTIONS}}
-{{#PRESET_TEMPLATE_OPTIONS}}
-{{/PRESET_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
