--- a/templates/ReportGenericColumns/Standard.hbs
+++ b/templates/ReportGenericColumns/Standard.hbs
@@ -122,7 +122,7 @@
         "DISPLAY_SEQUENCE": 1,
         "CSS_CLASSES": "ft-thead-light",
         "HELP_TEXT": ""
-	  },
+      },
       {
         "NAME": "THEAD_STYLE_DARK",
         "DISPLAY_NAME": "Dark",
@@ -146,7 +146,7 @@
         "DISPLAY_SEQUENCE": 1,
         "CSS_CLASSES": "table-sm",
         "HELP_TEXT": ""
-	  }
+      }
     ]
   }
 ]
@@ -158,28 +158,32 @@
     "DISPLAY_NAME": "Table Striped",
     "DISPLAY_SEQUENCE": 1,
     "CSS_CLASSES": "table-striped",
-    "HELP_TEXT": ""
+    "HELP_TEXT": "",
+    "IS_ADVANCED": ""
   },
   {
     "NAME": "TABLE_BORDERED",
     "DISPLAY_NAME": "Table Bordered",
     "DISPLAY_SEQUENCE": 2,
     "CSS_CLASSES": "table-bordered",
-    "HELP_TEXT": ""
+    "HELP_TEXT": "",
+    "IS_ADVANCED": ""
   },
   {
     "NAME": "TABLE_HOVER",
     "DISPLAY_NAME": "Table Hover",
     "DISPLAY_SEQUENCE": 3,
     "CSS_CLASSES": "table-hover",
-    "HELP_TEXT": ""
+    "HELP_TEXT": "",
+    "IS_ADVANCED": ""
   },
   {
     "NAME": "TABLE_CAPTION",
     "DISPLAY_NAME": "Show Region Title as Caption",
     "DISPLAY_SEQUENCE": 4,
     "CSS_CLASSES": "ft-table-caption",
-    "HELP_TEXT": ""
+    "HELP_TEXT": "",
+    "IS_ADVANCED": ""
   }
 ]
 {{/TEMPLATE_OPTIONS}}
