centers icons in their containers

--- a/src/scss/_apex_components.scss
+++ b/src/scss/_apex_components.scss
@@ -7,6 +7,7 @@
 @import "apex_components/forms";
 @import "apex_components/general";
 @import "apex_components/grid";
+@import "apex_components/icons";
 @import "apex_components/images";
 @import "apex_components/jumbotron";
 @import "apex_components/labels";
