--- a/src/scss/apex_components/_jumbotron.scss
+++ b/src/scss/apex_components/_jumbotron.scss
@@ -17,6 +17,7 @@
 	}
 }
 
+// jumbotron jumbo
 @include media-breakpoint-up(md) {
 	.jumbotron.ft-jumbotron-jumbo {
 		padding-top: 10rem!important;
