--- a/src/scss/apex_components/_themeroller.scss
+++ b/src/scss/apex_components/_themeroller.scss
@@ -1,121 +1,24 @@
-// body .ui-dialog.ui-widget.utr {
-// 	z-index: 1000!important;
-//
-// 	.utr-container__body {
-// 		max-height: 70vh!important;
-// 	}
-//
-// 	// select
-// 	&.a-LiveTemplateOptions {
-// 		.a-Property-field--select {
-// 			width: 95%;
-// 			padding-right: 0;
-// 		}
-// 	}
-//
-// 	// checkbox and radio
-// 	.a-Property-checkbox-input[type="checkbox"], .a-Property-radio-input[type="radio"] {
-// 		& + label {
-// 			padding-left: 35px;
-//
-// 			&:before {
-// 				background-color: transparent;
-// 				border: none;
-// 			}
-// 			&:after {
-// 				opacity: 1;
-// 			}
-// 		}
-//
-// 		// &:checked + label {
-// 		//     &:before {
-// 		//
-// 		//     }
-// 		//     &:after {
-// 		//
-// 		//     }
-// 		// }
-//
-// 		&:focus:checked + label {
-// 			&:before {
-// 				border-color: transparent;
-// 				background-color: transparent;
-// 			}
-// 			// &:after {
-// 			//
-// 			// }
-// 		}
-//
-// 		&:hover, &:focus {
-// 			& + label:before {
-// 				border-color: transparent;
-// 				box-shadow: none;
-// 			}
-//
-// 			& + label:after {
-// 				transform: inherit;
-// 			}
-// 		}
-// 	}
-//
-// 	// Footer
-// 	.ui-dialog-buttonpane {
-// 		margin-top: 0;
-// 		padding: 0;
-//
-// 		.ui-dialog-buttonset {
-// 			.ui-button {
-// 				background: none;
-// 			}
-//
-// 			.ui-button.ui-button--hot {
-// 			}
-// 		}
-// 	}
-//
-// 	.utr-toolbar-search {
-// 		border-bottom: none;
-// 		height: 30px;
-// 		width: 30px;
-// 		padding: 0;
-//
-// 		&:hover {
-// 			width: 100px;
-// 		}
-// 	}
-//
-// 	button:focus {
-// 		background-color:transparent;
-// 	}
-//
-// 	.utr-container__field--select__container select {
-// 		display:block;
-// 		height:auto;
-// 		padding: 0;
-// 	}
-//
-// 	.a-D3ColorPicker-control {
-// 		width: 4rem;
-// 		height: auto;
-// 		margin: 1px;
-// 	}
-//
-// 	.ui-dialog-titlebar {
-// 		.ui-dialog-titlebar__minimize {
-// 			right: 45px
-// 		}
-//
-// 		.ui-dialog-titlebar-close {
-// 			right: 20px;
-// 			top: 10px;
-// 		}
-// 	}
-//
-// 	label[for='utr_theme_name'] {
-// 		@include hide;
-// 	}
-//
-// 	.icon-tr-close {
-// 		@include hide;
-// 	}
-// }
+// toolbar modals
+.utr {
+	// region display selector
+	.apex-rds {
+		padding-top: 0;
+		margin-top: 0;
+		margin-bottom: 0;
+
+		li {
+			display: inline-block;
+			padding: 0.5rem;
+		}
+	}
+
+	.ui-dialog-titlebar-close {
+		top: auto!important;
+
+		&:before {
+			content: "\e0a2";
+			font-size: 16px;
+			font-family: apex-5-icon-font!important;
+		}
+	}
+}
