--- a/templates/Pages/Left and Right Side Columns.hbs
+++ b/templates/Pages/Left and Right Side Columns.hbs
@@ -26,35 +26,29 @@
 {{#BOX}}
 #FORM_OPEN#
 
-<!-- <input type="hidden" data-bind="init, value: homeLink" value="#HOME_LINK#"/>
-<input type="hidden" data-bind="init, value: appName" value="#LOGO#"/> -->
-
-<!-- Item Container -->
-#REGION_POSITION_01#
-
 <header class="ft-header">
 	<nav class="ft-navbar navbar d-flex flex-column flex-md-row">
 		#TOP_GLOBAL_NAVIGATION_LIST#
 		<a class="navbar-brand order-1 order-lg-0" href="#HOME_LINK#">#LOGO#</a>
 		#NAVIGATION_BAR#
 	</nav>
-	<!-- Header -->
+	<!-- Under Navigation Bar -->
 	#REGION_POSITION_02#
 </header>
 
-<div class="container-fluid">
+<main class="ft-main">
 	<div class="row">
-		<div class="ft-main-left col-sm-3 col-lg-2">#SIDE_GLOBAL_NAVIGATION_LIST##REGION_POSITION_03#</div>
+	  <div class="ft-breadcrumb col-12">#REGION_POSITION_04#</div>
+		<div class="ft-main-left col-12 col-sm-3">#SIDE_GLOBAL_NAVIGATION_LIST##REGION_POSITION_03#</div>
 
-		<main class="ft-main col">
-			<div class="ft-breadcrumb">#REGION_POSITION_04#</div>
+		<div class="ft-main-center col">
 			<div class="ft-messages">#GLOBAL_NOTIFICATION##SUCCESS_MESSAGE##NOTIFICATION_MESSAGE#</div>
 			<div class="ft-body">#BODY#</div>
-		</main>
+		</div>
 
-		<div class="ft-main-right col-sm-3 col-lg-2">#REGION_POSITION_05#</div>
+		<div class="ft-main-right col-12 col-sm-3">#REGION_POSITION_05#</div>
 	</div>
-</div>
+</main>
 
 <footer class="ft-footer">
 	<div class="ft-footer-top">#REGION_POSITION_08#</div>
@@ -221,5 +215,5 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}
-ft-page-body-container:ft-page-footer-container-fluid
+ft-page-body-container-fluid:ft-page-footer-container-fluid
 {{/PRESET_TEMPLATE_OPTIONS}}
