adds footer theme roller

--- a/src/scss/_apex_variables.scss
+++ b/src/scss/_apex_variables.scss
@@ -1,3 +1,4 @@
 @import "apex_variables/groups";
 @import "apex_variables/bootstrap";
 @import "apex_variables/custom";
+@import "apex_variables/footer";
