--- a/src/scss/apex_variables/_groups.scss
+++ b/src/scss/apex_variables/_groups.scss
@@ -3,14 +3,19 @@
   "translate": false,
   "groups":[
     {
-    "name": "Colors",
-    "common": true,
-    "sequence": 1
-},
+      "name": "Colors",
+      "common": true,
+      "sequence": 1
+    },
     {
-    "name": "Navigation",
-    "common": true,
-    "sequence": 2
+      "name": "Navigation",
+      "common": true,
+      "sequence": 2
+    },
+    {
+      "name": "Footer",
+      "common": true,
+      "sequence": 3
     }
   ]
 }
