enhances list templates

--- a/src/scss/_apex_components.scss
+++ b/src/scss/_apex_components.scss
@@ -13,6 +13,7 @@
 @import "apex_components/labels";
 @import "apex_components/media";
 @import "apex_components/modals";
+@import "apex_components/nav";
 @import "apex_components/navbar";
 @import "apex_components/paginations";
 @import "apex_components/tables";
