--- a/templates/Lists/Standard.hbs
+++ b/templates/Lists/Standard.hbs
@@ -4,7 +4,7 @@
 {{#INLINE_CSS}}{{/INLINE_CSS}}
 
 {{#LIST_TEMPLATE_BEFORE_ROWS}}
-<ul id="#LIST_ID#" class="nav #COMPONENT_CSS_CLASSES#">
+<ul id="#LIST_ID#" class="ft-nav nav #COMPONENT_CSS_CLASSES#">
 {{/LIST_TEMPLATE_BEFORE_ROWS}}
 {{#LIST_TEMPLATE_CURRENT}}
 <li class="nav-item active">
