--- a/src/scss/_aft_variables.scss
+++ b/src/scss/_aft_variables.scss
@@ -1,4 +1,4 @@
 @import "apex_variables/groups";
 @import "apex_variables/bootstrap";
-@import "apex_variables/custom";
+@import "apex_variables/navbar";
 @import "apex_variables/footer";
